WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184275
totalPhysicalSize calculation when splitting a range must account for double rounding effects
https://bugs.webkit.org/show_bug.cgi?id=184275
Summary
totalPhysicalSize calculation when splitting a range must account for double ...
Saam Barati
Reported
2018-04-03 12:04:19 PDT
...
Attachments
patch
(2.39 KB, patch)
2018-04-03 12:16 PDT
,
Saam Barati
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-04-03 12:16:45 PDT
Created
attachment 337100
[details]
patch
EWS Watchlist
Comment 2
2018-04-03 12:17:55 PDT
Attachment 337100
[details]
did not pass style-queue: ERROR: Source/bmalloc/bmalloc/LargeRange.h:137: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 3
2018-04-03 12:19:58 PDT
Comment on
attachment 337100
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=337100&action=review
I see. When you detect the rounding error, you re-attribute the error back over to the left side. r=me.
> Source/bmalloc/ChangeLog:10 > + rounding may cause the left size to loose a byte, and the right
typo: /loose/lose/.
Saam Barati
Comment 4
2018-04-03 13:41:57 PDT
landed in:
https://trac.webkit.org/changeset/230222/webkit
Radar WebKit Bug Importer
Comment 5
2018-04-03 13:42:25 PDT
<
rdar://problem/39152668
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug